--- a/final-project/selection2.html
+++ b/final-project/selection2.html
@@ -61,15 +61,10 @@
               </form>
 
               <ul class="js-clone-nav d-none d-lg-inline-block text-start site-menu mx-auto">
-                <li class="active"><a href="index.html">Home</a></li>
-								<li><a href="selection.html">Selection</a></li> 
+                <li><a href="index.html">Home</a></li>
+								<li class="active"><a href="selection.html">Selection</a></li> 
 								<li><a href="coffee.html">About Coffee</a></li>
-								<li><a href="shop.html">Shop</a></li>
-								<li class="has-children">
-									<a href="setting.html">Setting</a>
-									<ul class="dropdown">
-										<li><a href="individual.html">individual</a></li>
-										<li><a href="group.html">Group</a></li>
+								<li><a href="contact.html">Contact us</a></li>
               </ul>
             </div>
             <div class="col-2 text-end">
