--- a/final-project/selection2.html
+++ b/final-project/selection2.html
@@ -98,62 +98,62 @@
       <div class="row posts-entry">
         <div class="col-lg-8">
           <div class="blog-entry d-flex blog-entry-search-item">
-            <a href="single.html" class="img-link me-4">
+            <a href="https://www.facebook.com/CafeMacho" class="img-link me-4">
               <img src="images/macho.jpg" alt="Image" class="img-fluid">
             </a>
             <div>
               <span class="date">Apr. 11th, 2022 &bullet; <a href="#">Coffee</a></span>
-              <h2><a href="single.html">Coffee Shop - CAFE Macho</a></h2>
+              <h2><a href="https://www.facebook.com/CafeMacho">Coffee Shop - CAFE Macho</a></h2>
               <p>台北市中正區晉江街10號</p>
-              <p><a href="single.html" class="btn btn-sm btn-outline-primary">Read More</a></p>
+              <p><a href="https://www.facebook.com/CafeMacho" class="btn btn-sm btn-outline-primary">Read More</a></p>
             </div>
           </div>
 
           <div class="blog-entry d-flex blog-entry-search-item">
-            <a href="single.html" class="img-link me-4">
+            <a href="https://www.facebook.com/cafe.kuroshio/" class="img-link me-4">
               <img src="images/kuroshio.jpg" alt="Image" class="img-fluid">
             </a>
             <div>
               <span class="date">Apr. 12th, 2022 &bullet; <a href="#">Coffee</a></span>
-              <h2><a href="single.html">Coffee Shop - CAFE Kuroshio</a></h2>
+              <h2><a href="https://www.facebook.com/cafe.kuroshio/">Coffee Shop - CAFE Kuroshio</a></h2>
               <p>台北市大安區和平東路一段141巷9之1號</p>
-              <p><a href="single.html" class="btn btn-sm btn-outline-primary">Read More</a></p>
+              <p><a href="https://www.facebook.com/cafe.kuroshio/" class="btn btn-sm btn-outline-primary">Read More</a></p>
             </div>
           </div>
 
           <div class="blog-entry d-flex blog-entry-search-item">
-            <a href="single.html" class="img-link me-4">
+            <a href="https://www.facebook.com/profile.php?id=100054268311168" class="img-link me-4">
               <img src="images/mania.jpg" alt="Image" class="img-fluid">
             </a>
             <div>
               <span class="date">Apr. 13th, 2022 &bullet; <a href="#">Coffee</a></span>
-              <h2><a href="single.html">Coffee Shop - Coffee Mania</a></h2>
+              <h2><a href="https://www.facebook.com/profile.php?id=100054268311168">Coffee Shop - Coffee Mania</a></h2>
               <p>台北市大安區師大路80巷19號</p>
-              <p><a href="single.html" class="btn btn-sm btn-outline-primary">Read More</a></p>
+              <p><a href="https://www.facebook.com/profile.php?id=100054268311168" class="btn btn-sm btn-outline-primary">Read More</a></p>
             </div>
           </div>
 
           <div class="blog-entry d-flex blog-entry-search-item">
-            <a href="single.html" class="img-link me-4">
+            <a href="https://www.facebook.com/picnicafe/?ref=ts" class="img-link me-4">
               <img src="images/picnic.jpg" alt="Image" class="img-fluid">
             </a>
             <div>
               <span class="date">Apr. 14th, 2022 &bullet; <a href="#">Coffee</a></span>
-              <h2><a href="single.html">Coffee Shop - Picnic</a></h2>
+              <h2><a href="https://www.facebook.com/picnicafe/?ref=ts">Coffee Shop - Picnic</a></h2>
               <p>台北市大安區溫州街75號</p>
-              <p><a href="single.html" class="btn btn-sm btn-outline-primary">Read More</a></p>
+              <p><a href="https://www.facebook.com/picnicafe/?ref=ts" class="btn btn-sm btn-outline-primary">Read More</a></p>
             </div>
           </div>
 
           <div class="blog-entry d-flex blog-entry-search-item">
-            <a href="single.html" class="img-link me-4">
+            <a href="https://www.twjanacafe.com/" class="img-link me-4">
               <img src="images/jana.jpg" alt="Image" class="img-fluid">
             </a>
             <div>
               <span class="date">Apr. 15th, 2022 &bullet; <a href="#">Coffee</a></span>
-              <h2><a href="single.html">Coffee Shop - Jana Coffee</a></h2>
+              <h2><a href="https://www.twjanacafe.com/">Coffee Shop - Jana Coffee</a></h2>
               <p>台北市大安區泰順街60巷27號一樓</p>
-              <p><a href="single.html" class="btn btn-sm btn-outline-primary">Read More</a></p>
+              <p><a href="https://www.twjanacafe.com/" class="btn btn-sm btn-outline-primary">Read More</a></p>
             </div>
           </div>
 
@@ -186,7 +186,7 @@
             <div class="post-entry-sidebar">
               <ul>
                 <li>
-                  <a href="">
+                  <a href="https://www.facebook.com/cat.jpg.cafe">
                     <img src="images/coffee-1.jpg" alt="Image placeholder" class="me-4 rounded">
                     <div class="text">
                       <h4>Coffee Shop - Cat.jpg</h4>
@@ -197,7 +197,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="">
+                  <a href="https://www.facebook.com/ecolecafe.cafetrouve/">
                     <img src="images/ecole.jpg" alt="Image placeholder" class="me-4 rounded">
                     <div class="text">
                       <h4>Coffee Shop - Ecole Cafe</h4>
@@ -208,7 +208,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="">
+                  <a href="https://www.facebook.com/youmoutoohanacoffee">
                     <img src="images/youmoutoohana.jpg" alt="Image placeholder" class="me-4 rounded">
                     <div class="text">
                       <h4>Coffee Shop - Youmoutoohana Coffee</h4>
