--- a/final-project/selection.html
+++ b/final-project/selection.html
@@ -110,26 +110,26 @@
           </div>
 
           <div class="blog-entry d-flex blog-entry-search-item">
-            <a href="https://www.facebook.com/profile.php?id=100063696143452&ref=hl" class="img-link me-4">
+            <a href="https://www.facebook.com/profile.php?id=100063696143452&ref=hl/" class="img-link me-4">
               <img src="images/light.jpg" alt="Image" class="img-fluid">
             </a>
             <div>
               <span class="date">Apr. 12th, 2022 &bullet; <a href="#">Coffee</a></span>
-              <h2><a href="https://www.facebook.com/profile.php?id=100063696143452&ref=hl">Coffee Shop - Light Cafe</a></h2>
+              <h2><a href="https://www.facebook.com/profile.php?id=100063696143452&ref=hl/">Coffee Shop - Light Cafe</a></h2>
               <p>台北市羅斯福路三段244巷10弄19號</p>
-              <p><a href="https://www.facebook.com/profile.php?id=100063696143452&ref=hl" class="btn btn-sm btn-outline-primary">Read More</a></p>
+              <p><a href="https://www.facebook.com/profile.php?id=100063696143452&ref=hl/" class="btn btn-sm btn-outline-primary">Read More</a></p>
             </div>
           </div>
 
           <div class="blog-entry d-flex blog-entry-search-item">
-            <a href="https://www.facebook.com/cafesugarman" class="img-link me-4">
+            <a href="https://www.facebook.com/cafesugarman/" class="img-link me-4">
               <img src="images/sugarman.jpg" alt="Image" class="img-fluid">
             </a>
             <div>
               <span class="date">Apr. 13th, 2022 &bullet; <a href="#">Coffee</a></span>
-              <h2><a href="https://www.facebook.com/cafesugarman">Coffee Shop - Sugarman Cafe</a></h2>
+              <h2><a href="https://www.facebook.com/cafesugarman/">Coffee Shop - Sugarman Cafe</a></h2>
               <p>台北市大安區和平東路一段87-1號</p>
-              <p><a href="https://www.facebook.com/cafesugarman" class="btn btn-sm btn-outline-primary">Read More</a></p>
+              <p><a href="https://www.facebook.com/cafesugarman/" class="btn btn-sm btn-outline-primary">Read More</a></p>
             </div>
           </div>
 
@@ -146,14 +146,14 @@
           </div>
 
           <div class="blog-entry d-flex blog-entry-search-item">
-            <a href="https://www.facebook.com/youmoutoohanacoffee" class="img-link me-4">
+            <a href="https://www.facebook.com/youmoutoohanacoffee/" class="img-link me-4">
               <img src="images/youmoutoohana.jpg" alt="Image" class="img-fluid">
             </a>
             <div>
               <span class="date">Apr. 15th, 2022 &bullet; <a href="#">Coffee</a></span>
-              <h2><a href="https://www.facebook.com/youmoutoohanacoffee">Coffee Shop - Youmoutoohana Coffee</a></h2>
+              <h2><a href="https://www.facebook.com/youmoutoohanacoffee/">Coffee Shop - Youmoutoohana Coffee</a></h2>
               <p>台北市永康街37巷12號</p>
-              <p><a href="https://www.facebook.com/youmoutoohanacoffee" class="btn btn-sm btn-outline-primary">Read More</a></p>
+              <p><a href="https://www.facebook.com/youmoutoohanacoffee/" class="btn btn-sm btn-outline-primary">Read More</a></p>
             </div>
           </div>
 
@@ -186,7 +186,7 @@
             <div class="post-entry-sidebar">
               <ul>
                 <li>
-                  <a href="https://www.facebook.com/cat.jpg.cafe">
+                  <a href="https://www.facebook.com/cat.jpg.cafe/">
                     <img src="images/coffee-1.jpg" alt="Image placeholder" class="me-4 rounded">
                     <div class="text">
                       <h4>Coffee Shop - Cat.jpg</h4>
